[Streams API] streams should not directly use Number and related methods https://bugs.webkit.org/show_bug.cgi?id=151499

Reviewed by Darin Adler.

Source/JavaScriptCore:

* runtime/CommonIdentifiers.h: Adding isNaN as private symbol.
* runtime/JSGlobalObject.cpp:
(JSC::JSGlobalObject::init): Adding @isNaN function.

Source/WebCore:

Covered by updated test.

Using @Number, @isFinite and @isNaN in place of Number, Number.isFinite and Number.isNaN.

* Modules/streams/ReadableStreamInternals.js:
(enqueueInReadableStream):
* Modules/streams/StreamInternals.js:
(validateAndNormalizeQueuingStrategy):
(enqueueValueWithSize):

LayoutTests:

Added a non-regression test.

* streams/streams-promises-expected.txt:
* streams/streams-promises.html:


Canonical link: https://commits.webkit.org/169824@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192874 268f45cc-cd09-0410-ab3c-d52691b4dbfc